some small fixes

--- a/7-nostalgia/data-prep.ipynb
+++ b/7-nostalgia/data-prep.ipynb
@@ -303,7 +303,7 @@
     {
      "data": {
       "text/plain": [
-       "11881    Small World: Heart to Heartstone\n",
+       "11879    Small World: Heart to Heartstone\n",
        "Name: episode, dtype: object"
       ]
      },
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "0    759\n",
+       "0    758\n",
        "dtype: int64"
       ]
      },
@@ -434,12 +434,12 @@
        "3            Brian: Sugar... spice... and everything nice.\n",
        "4        Brian: Yep, those are pretty normal ingredient...\n",
        "                               ...                        \n",
-       "16247                           Buttercup: Correct, Mayor.\n",
-       "16248                                          Mayor: Huh?\n",
-       "16249                               Bubbles: That’s right.\n",
-       "16250                                             Mayor: …\n",
-       "16251    Narrator: And so once again the day— My head h...\n",
-       "Name: dialog, Length: 16252, dtype: object"
+       "16245                           Buttercup: Correct, Mayor.\n",
+       "16246                                          Mayor: Huh?\n",
+       "16247                               Bubbles: That’s right.\n",
+       "16248                                             Mayor: …\n",
+       "16249    Narrator: And so once again the day— My head h...\n",
+       "Name: dialog, Length: 16250, dtype: object"
       ]
      },
      "execution_count": 9,
@@ -556,12 +556,12 @@
        "3                   Sugar... spice... and everything nice.\n",
        "4        Yep, those are pretty normal ingredients, all ...\n",
        "                               ...                        \n",
-       "16247                                      Correct, Mayor.\n",
-       "16248                                                 Huh?\n",
-       "16249                                        That’s right.\n",
-       "16250                                                    …\n",
-       "16251            And so once again the day— My head hurts!\n",
-       "Name: dialog, Length: 16252, dtype: object"
+       "16245                                      Correct, Mayor.\n",
+       "16246                                                 Huh?\n",
+       "16247                                        That’s right.\n",
+       "16248                                                    …\n",
+       "16249            And so once again the day— My head hurts!\n",
+       "Name: dialog, Length: 16250, dtype: object"
       ]
      },
      "execution_count": 12,
@@ -1340,7 +1340,7 @@
     {
      "data": {
       "text/plain": [
-       "16252"
+       "16250"
       ]
      },
      "execution_count": 16,
@@ -1442,38 +1442,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16658</th>\n",
+       "      <th>16656</th>\n",
        "      <td>The Headsucker's Moxy</td>\n",
        "      <td>Correct, Mayor.</td>\n",
        "      <td>buttercup</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16659</th>\n",
+       "      <th>16657</th>\n",
        "      <td>The Headsucker's Moxy</td>\n",
        "      <td>Huh?</td>\n",
        "      <td>mayor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16660</th>\n",
+       "      <th>16658</th>\n",
        "      <td>The Headsucker's Moxy</td>\n",
        "      <td>That’s right.</td>\n",
        "      <td>bubbles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16661</th>\n",
+       "      <th>16659</th>\n",
        "      <td>The Headsucker's Moxy</td>\n",
        "      <td>…</td>\n",
        "      <td>mayor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16662</th>\n",
+       "      <th>16660</th>\n",
        "      <td>The Headsucker's Moxy</td>\n",
        "      <td>And so once again the day— My head hurts!</td>\n",
        "      <td>narrator</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16663 rows × 3 columns</p>\n",
+       "<p>16661 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1484,11 +1484,11 @@
        "3              A Documentary   \n",
        "4              A Documentary   \n",
        "...                      ...   \n",
+       "16656  The Headsucker's Moxy   \n",
+       "16657  The Headsucker's Moxy   \n",
        "16658  The Headsucker's Moxy   \n",
        "16659  The Headsucker's Moxy   \n",
        "16660  The Headsucker's Moxy   \n",
-       "16661  The Headsucker's Moxy   \n",
-       "16662  The Headsucker's Moxy   \n",
        "\n",
        "                                                  dialog       speaker  \n",
        "0      The city of Townsville. This is where the Powe...  brian larsen  \n",
@@ -1497,13 +1497,13 @@
        "3                 Sugar... spice... and everything nice.         brian  \n",
        "4      Yep, those are pretty normal ingredients, all ...         brian  \n",
        "...                                                  ...           ...  \n",
-       "16658                                    Correct, Mayor.     buttercup  \n",
-       "16659                                               Huh?         mayor  \n",
-       "16660                                      That’s right.       bubbles  \n",
-       "16661                                                  …         mayor  \n",
-       "16662          And so once again the day— My head hurts!      narrator  \n",
+       "16656                                    Correct, Mayor.     buttercup  \n",
+       "16657                                               Huh?         mayor  \n",
+       "16658                                      That’s right.       bubbles  \n",
+       "16659                                                  …         mayor  \n",
+       "16660          And so once again the day— My head hurts!      narrator  \n",
        "\n",
-       "[16663 rows x 3 columns]"
+       "[16661 rows x 3 columns]"
       ]
      },
      "execution_count": 18,
@@ -1627,45 +1627,45 @@
        "billy                  82\n",
        "sedusa                 77\n",
        "talking dog            69\n",
-       "dick                   62\n",
        "monster                62\n",
+       "dick                   62\n",
        "bernie                 60\n",
        "announcer              54\n",
        "marianne               53\n",
        "thief                  52\n",
        "boomer                 50\n",
        "butch                  50\n",
+       "brian                  46\n",
        "robin                  46\n",
        "girl                   46\n",
-       "brian                  46\n",
-       "boy                    45\n",
        "major glory            45\n",
+       "boy                    45\n",
        "mitch                  42\n",
        "arturo                 42\n",
        "snake                  41\n",
-       "cop                    39\n",
        "whitfield              39\n",
+       "cop                    39\n",
        "harold                 38\n",
        "kid                    38\n",
        "crowd                  35\n",
        "slim                   34\n",
-       "reporter               32\n",
        "junior                 32\n",
+       "reporter               32\n",
        "teacher                27\n",
        "captain                26\n",
-       "sapna                  25\n",
        "lenny                  25\n",
+       "sapna                  25\n",
        "voice                  24\n",
-       "mr. green              23\n",
-       "mike                   23\n",
-       "mary                   23\n",
-       "253                    23\n",
-       "femme fatale           23\n",
        "mopey                  23\n",
+       "mary                   23\n",
+       "mike                   23\n",
+       "253                    23\n",
+       "mr. green              23\n",
+       "femme fatale           23\n",
+       "madame argentina       21\n",
        "shaquille              20\n",
        "crack                  19\n",
        "rowdyruff boys         19\n",
-       "lester                 18\n",
        "Name: speaker, dtype: int64"
       ]
      },
@@ -2647,7 +2647,7 @@
      "data": {
       "text/plain": [
        "2.0    3006\n",
-       "6.0    2956\n",
+       "6.0    2954\n",
        "3.0    2922\n",
        "1.0    2724\n",
        "5.0    2584\n",
@@ -2780,7 +2780,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12173</th>\n",
+       "      <th>12171</th>\n",
        "      <td>small world: heart to heartstone</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
@@ -2798,13 +2798,13 @@
       ],
       "text/plain": [
        "                                episode dialog speaker villain  season  \\\n",
-       "12173  small world: heart to heartstone   None     NaN    None     3.0   \n",
+       "12171  small world: heart to heartstone   None     NaN    None     3.0   \n",
        "\n",
        "       episode_nr                                        description  \\\n",
-       "12173        16.0  The Powerpuff Girls are sent to the arctic on ...   \n",
+       "12171        16.0  The Powerpuff Girls are sent to the arctic on ...   \n",
        "\n",
        "                                title_1 title_2    year  \n",
-       "12173  small world: heart to heartstone     NaN  2016.0  "
+       "12171  small world: heart to heartstone     NaN  2016.0  "
       ]
      },
      "execution_count": 39,
@@ -2894,20 +2894,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 16662 entries, 0 to 16662\n",
+      "Int64Index: 16660 entries, 0 to 16660\n",
       "Data columns (total 10 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   episode      16662 non-null  object \n",
-      " 1   dialog       16662 non-null  object \n",
+      " 0   episode      16660 non-null  object \n",
+      " 1   dialog       16660 non-null  object \n",
       " 2   speaker      16524 non-null  object \n",
       " 3   villain      2628 non-null   object \n",
-      " 4   season       16662 non-null  float64\n",
-      " 5   episode_nr   16662 non-null  float64\n",
-      " 6   description  16662 non-null  object \n",
-      " 7   title_1      16662 non-null  object \n",
-      " 8   title_2      12709 non-null  object \n",
-      " 9   year         16662 non-null  float64\n",
+      " 4   season       16660 non-null  float64\n",
+      " 5   episode_nr   16660 non-null  float64\n",
+      " 6   description  16660 non-null  object \n",
+      " 7   title_1      16660 non-null  object \n",
+      " 8   title_2      12707 non-null  object \n",
+      " 9   year         16660 non-null  float64\n",
       "dtypes: float64(3), object(7)\n",
       "memory usage: 1.4+ MB\n"
      ]
@@ -3221,16 +3221,16 @@
     {
      "data": {
       "text/plain": [
-       "episode        138\n",
-       "dialog         138\n",
+       "episode        136\n",
+       "dialog         136\n",
        "speaker          0\n",
        "villain          0\n",
-       "season         138\n",
-       "episode_nr     138\n",
-       "description    138\n",
-       "title_1        138\n",
-       "title_2        130\n",
-       "year           138\n",
+       "season         136\n",
+       "episode_nr     136\n",
+       "description    136\n",
+       "title_1        136\n",
+       "title_2        128\n",
+       "year           136\n",
        "dtype: int64"
       ]
      },
@@ -3262,20 +3262,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 16662 entries, 0 to 16662\n",
+      "Int64Index: 16660 entries, 0 to 16660\n",
       "Data columns (total 10 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   episode      16662 non-null  object \n",
-      " 1   dialog       16662 non-null  object \n",
-      " 2   speaker      16662 non-null  object \n",
+      " 0   episode      16660 non-null  object \n",
+      " 1   dialog       16660 non-null  object \n",
+      " 2   speaker      16660 non-null  object \n",
       " 3   villain      2628 non-null   object \n",
-      " 4   season       16662 non-null  float64\n",
-      " 5   episode_nr   16662 non-null  float64\n",
-      " 6   description  16662 non-null  object \n",
-      " 7   title_1      16662 non-null  object \n",
-      " 8   title_2      12709 non-null  object \n",
-      " 9   year         16662 non-null  float64\n",
+      " 4   season       16660 non-null  float64\n",
+      " 5   episode_nr   16660 non-null  float64\n",
+      " 6   description  16660 non-null  object \n",
+      " 7   title_1      16660 non-null  object \n",
+      " 8   title_2      12707 non-null  object \n",
+      " 9   year         16660 non-null  float64\n",
       "dtypes: float64(3), object(7)\n",
       "memory usage: 1.4+ MB\n"
      ]
@@ -3293,16 +3293,16 @@
     {
      "data": {
       "text/plain": [
-       "episode        138\n",
-       "dialog         138\n",
-       "speaker        138\n",
+       "episode        136\n",
+       "dialog         136\n",
+       "speaker        136\n",
        "villain          0\n",
-       "season         138\n",
-       "episode_nr     138\n",
-       "description    138\n",
-       "title_1        138\n",
-       "title_2        130\n",
-       "year           138\n",
+       "season         136\n",
+       "episode_nr     136\n",
+       "description    136\n",
+       "title_1        136\n",
+       "title_2        128\n",
+       "year           136\n",
        "dtype: int64"
       ]
      },
@@ -3866,12 +3866,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>monster</td>\n",
+       "      <td>billy</td>\n",
        "      <td>448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
-       "      <td>billy</td>\n",
+       "      <td>monster</td>\n",
        "      <td>448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3966,8 +3966,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>voice</td>\n",
-       "      <td>234</td>\n",
+       "      <td>boogie man</td>\n",
+       "      <td>211</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4004,8 +4004,8 @@
        "27           marianne                  507\n",
        "28           reporter                  496\n",
        "29              thief                  489\n",
-       "30            monster                  448\n",
-       "31              billy                  448\n",
+       "30              billy                  448\n",
+       "31            monster                  448\n",
        "32             harold                  373\n",
        "33              gnome                  362\n",
        "34       femme fatale                  350\n",
@@ -4024,7 +4024,7 @@
        "47              butch                  244\n",
        "48            burglar                  240\n",
        "49        roach coach                  238\n",
-       "50              voice                  234"
+       "50         boogie man                  211"
       ]
      },
      "execution_count": 51,
