finally fixed weird size discrepancy bug

--- a/7-nostalgia/data-prep.ipynb
+++ b/7-nostalgia/data-prep.ipynb
@@ -4931,16 +4931,16 @@
        "      <td>275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>ms keane</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>307</th>\n",
        "      <td>professor</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>308</th>\n",
-       "      <td>blossom</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3071</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4996,8 +4996,8 @@
        "218                man     3.0                  293\n",
        "219              woman     3.0                  280\n",
        "220              brick     3.0                  275\n",
-       "307          professor     4.0                 3091\n",
-       "308            blossom     4.0                 3071"
+       "232           ms keane     3.0                  126\n",
+       "307          professor     4.0                 3091"
       ]
      },
      "execution_count": 59,
@@ -5016,8 +5016,8 @@
     "        \"narrator\",\n",
     "        \"bubbles\",\n",
     "        \"mayor\",\n",
-    "        \"ms. keane\",\n",
-    "        \"ms. bellum\"\n",
+    "        \"ms keane\",\n",
+    "        \"ms bellum\"\n",
     "    ])) | (good_aggregate_seasons_1998['word_count_for_line'] > 250)\n",
     "]\n",
     "good_aggregate_seasons_1998.head(50)"
@@ -5623,6 +5623,14 @@
        "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>ms bellum</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>insect inside</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>mayor</td>\n",
        "      <td>1.0</td>\n",
@@ -5846,14 +5854,6 @@
        "      <td>fuzzy logic</td>\n",
        "      <td>214</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>narrator</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>fuzzy logic</td>\n",
-       "      <td>127</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -5881,6 +5881,7 @@
        "29      bubbles     1.0         2.1          insect inside   \n",
        "30    buttercup     1.0         2.1          insect inside   \n",
        "31        mayor     1.0         2.1          insect inside   \n",
+       "37    ms bellum     1.0         2.1          insect inside   \n",
        "38        mayor     1.0         2.2        powerpuff bluff   \n",
        "39          253     1.0         2.2        powerpuff bluff   \n",
        "40      blossom     1.0         2.2        powerpuff bluff   \n",
@@ -5909,7 +5910,6 @@
        "82      bubbles     1.0         4.1            buttercrush   \n",
        "84    buttercup     1.0         4.1            buttercrush   \n",
        "85        fuzzy     1.0         4.2            fuzzy logic   \n",
-       "86     narrator     1.0         4.2            fuzzy logic   \n",
        "\n",
        "    word_count_for_line  \n",
        "0                   325  \n",
@@ -5933,6 +5933,7 @@
        "29                   67  \n",
        "30                   62  \n",
        "31                   45  \n",
+       "37                    7  \n",
        "38                  278  \n",
        "39                  251  \n",
        "40                  156  \n",
@@ -5960,8 +5961,7 @@
        "79                   33  \n",
        "82                    9  \n",
        "84                    2  \n",
-       "85                  214  \n",
-       "86                  127  "
+       "85                  214  "
       ]
      },
      "execution_count": 62,
@@ -5980,8 +5980,8 @@
     "        \"narrator\",\n",
     "        \"bubbles\",\n",
     "        \"mayor\",\n",
-    "        \"ms. keane\",\n",
-    "        \"ms. bellum\"\n",
+    "        \"ms keane\",\n",
+    "        \"ms bellum\"\n",
     "    ])) | (good_aggregate_episodes_1998['word_count_for_line'] > 100)\n",
     "]\n",
     "good_aggregate_episodes_1998.head(50)"
@@ -7855,14 +7855,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/dy/hw0ckby90bxf_gm4t4jmb1yh0000gn/T/ipykernel_44848/2961070111.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/dy/hw0ckby90bxf_gm4t4jmb1yh0000gn/T/ipykernel_46318/2961070111.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  lines_1998[(lines_1998['season'] == 3)].groupby('episode').sum().head(50)\n"
      ]
     },
@@ -8102,7 +8102,7 @@
        "town and out                300.0       210.0  199800.0                  935"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
