--- a/9-culture/data-prep.ipynb
+++ b/9-culture/data-prep.ipynb
@@ -2587,91 +2587,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from PIL import Image\n",
+    "from PIL import Image\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
-    "# def extract_primary_colors(image_path, num_colors):\n",
-    "#     image = Image.open(image_path)\n",
-    "#     image_array = np.array(image)\n",
+    "def extract_primary_colors(image_path, num_colors):\n",
+    "    image = Image.open(image_path)\n",
+    "    image_array = np.array(image)\n",
     "\n",
-    "#     # Reshape the array to a list of RGB values\n",
-    "#     reshaped_array = image_array.reshape((-1, 3))\n",
+    "    # Reshape the array to a list of RGB values\n",
+    "    reshaped_array = image_array.reshape((-1, 3))\n",
     "\n",
-    "#     kmeans = KMeans(n_clusters=num_colors)\n",
-    "#     kmeans.fit(reshaped_array)\n",
+    "    kmeans = KMeans(n_clusters=num_colors)\n",
+    "    kmeans.fit(reshaped_array)\n",
     "\n",
-    "#     # Get the RGB values of the cluster centers (primary colors)\n",
-    "#     primary_colors = kmeans.cluster_centers_.astype(int)\n",
+    "    # Get the RGB values of the cluster centers (primary colors)\n",
+    "    primary_colors = kmeans.cluster_centers_.astype(int)\n",
     "\n",
-    "#     return primary_colors, kmeans\n",
+    "    return primary_colors, kmeans\n",
     "\n",
-    "# def transform_image(image_array, primary_colors, model):\n",
-    "#     # Reshape the image array to a list of RGB values\n",
-    "#     reshaped_array = image_array.reshape((-1, 3))\n",
+    "def transform_image(image_array, primary_colors, model):\n",
+    "    # Reshape the image array to a list of RGB values\n",
+    "    reshaped_array = image_array.reshape((-1, 3))\n",
     "\n",
-    "#     # Use KMeans to predict the nearest cluster for each pixel\n",
-    "#     labels = model.predict(reshaped_array)\n",
+    "    # Use KMeans to predict the nearest cluster for each pixel\n",
+    "    labels = model.predict(reshaped_array)\n",
     "\n",
-    "#     # Replace each pixel with the color of the nearest cluster center\n",
-    "#     transformed_image_array = primary_colors[labels]\n",
+    "    # Replace each pixel with the color of the nearest cluster center\n",
+    "    transformed_image_array = primary_colors[labels]\n",
     "\n",
-    "#     # Reshape the transformed array back to the original image shape\n",
-    "#     transformed_image_array = transformed_image_array.reshape(image_array.shape)\n",
+    "    # Reshape the transformed array back to the original image shape\n",
+    "    transformed_image_array = transformed_image_array.reshape(image_array.shape)\n",
     "\n",
-    "#     # Convert the array back to an image\n",
-    "#     transformed_image = Image.fromarray(transformed_image_array.astype(np.uint8))\n",
+    "    # Convert the array back to an image\n",
+    "    transformed_image = Image.fromarray(transformed_image_array.astype(np.uint8))\n",
     "\n",
-    "#     return transformed_image\n",
+    "    return transformed_image\n",
     "\n",
-    "# def display_colors(colors):\n",
-    "#     print(colors)\n",
-    "#     # Display the primary colors\n",
-    "#     for color in colors:\n",
-    "#         swatch = np.zeros((100, 100, 3), dtype=np.uint8)\n",
-    "#         swatch[:, :] = color\n",
-    "#         Image.fromarray(swatch).show()\n",
+    "def display_colors(colors):\n",
+    "    print(colors)\n",
+    "    # Display the primary colors\n",
+    "    for color in colors:\n",
+    "        swatch = np.zeros((100, 100, 3), dtype=np.uint8)\n",
+    "        swatch[:, :] = color\n",
+    "        Image.fromarray(swatch).show()\n",
     "\n",
-    "# def save_transformed_image(image_path, transformed_image, spice):\n",
-    "#     file_name_without_extension = image_path.split(\".\")[0]\n",
-    "#     transformed_image.save(f\"./indo-food/{spice}_reduced.png\")\n",
+    "def save_transformed_image(image_path, transformed_image, spice):\n",
+    "    file_name_without_extension = image_path.split(\".\")[0]\n",
+    "    transformed_image.save(f\"./indo-food/{spice}_reduced.png\")\n",
     "    \n",
-    "# def display_transformed_image(image_path, primary_colors, model, spice):\n",
-    "#     original_image = Image.open(image_path)\n",
-    "#     original_image_array = np.array(original_image)\n",
+    "def display_transformed_image(image_path, primary_colors, model, spice):\n",
+    "    original_image = Image.open(image_path)\n",
+    "    original_image_array = np.array(original_image)\n",
     "\n",
-    "#     # Transform the image using the primary colors\n",
-    "#     transformed_image = transform_image(original_image_array, primary_colors, model)\n",
-    "#     # transformed_image.show()\n",
-    "#     # save_transformed_image(image_path, transformed_image, spice)"
+    "    # Transform the image using the primary colors\n",
+    "    transformed_image = transform_image(original_image_array, primary_colors, model)\n",
+    "    # transformed_image.show()\n",
+    "    save_transformed_image(image_path, transformed_image, spice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[166 137 101]\n",
+      " [ 62  36  26]\n",
+      " [250 250 225]\n",
+      " [140 113  84]\n",
+      " [215 196 158]\n",
+      " [ 21  21  21]\n",
+      " [114  91  67]\n",
+      " [ 89  72  54]\n",
+      " [119  66  39]\n",
+      " [223 169  93]\n",
+      " [192 162 121]\n",
+      " [147  89  47]\n",
+      " [ 37  35  30]\n",
+      " [199 141  77]\n",
+      " [231 186 124]\n",
+      " [ 60  55  44]\n",
+      " [244 232 189]\n",
+      " [247 217 151]\n",
+      " [ 89  50  33]\n",
+      " [173 114  61]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# for spice in most_common_spices:\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
-    "#     # Specify the path to your WebP image\n",
-    "#     spice_id = spice[0].replace(' ', '-')\n",
-    "#     image_path = f\"./indo-food/{spice_id}.webp\"\n",
+    "for spice in ['peanuts']:\n",
+    "\n",
+    "    # Specify the path to your WebP image\n",
+    "    spice_id = spice.replace(' ', '-')\n",
+    "    image_path = f\"./indo-food/{spice_id}.webp\"\n",
     "    \n",
-    "#     # Specify the number of primary colors you want\n",
-    "#     num_colors = 10\n",
+    "    # Specify the number of primary colors you want\n",
+    "    num_colors = 20\n",
     "    \n",
-    "#     # Extract primary colors\n",
-    "#     primary_colors, model = extract_primary_colors(image_path, num_colors)\n",
-    "#     # display_transformed_image(image_path, primary_colors, model, spice_id)\n",
-    "#     display_colors(primary_colors)"
+    "    # Extract primary colors\n",
+    "    primary_colors, model = extract_primary_colors(image_path, num_colors)\n",
+    "    display_transformed_image(image_path, primary_colors, model, spice_id)\n",
+    "    display_colors(primary_colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2702,7 +2733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
